    (closes: #298842)
  * Add Swedish debconf template translation (closes: #339890)
  * Depend on any debconf-2.0 implementation instead of debconf
    specifically (closes: #332018)
  * Copyright file:
    - New FSF address
    - List the other maintainers
  * Depend on adduser, used in preinst
  * Move away from deprecated user.group syntax in chown

 -- Lionel Elie Mamane <lmamane@debian.org>  Sat, 26 Nov 2005 09:36:13 +0100

mailman (2.1.5-9) unstable; urgency=medium

  * Update the Belgian translation, thanks to Luc Stroobant for prodding
    and for providing the translation.  (closes: #306748)

 -- Tollef Fog Heen <tfheen@debian.org>  Sat, 28 May 2005 12:47:32 +0200

mailman (2.1.5-8) unstable; urgency=low

  * Add Italian debconf translation (closes: #278562)
  * Remove Siggy from uploaders as he is MIA.
  * Actually add 67_update_handle_old_versions to the list of patches applied
    and fix up line numbers.  (closes: #304023)

 -- Tollef Fog Heen <tfheen@debian.org>  Thu, 14 Apr 2005 16:01:15 +0200

mailman (2.1.5-7) unstable; urgency=high

  * Brown bag release -- use '/' instead of the undefined SLASH in
    Cgi/private.py.  (closes: #294874)
  * Handle the case of non-ascii chars in realname.  (closes: #293861)
  * Fix up typo in cron script (closes: #284311)
  * Use head -n 1 instead of cat for getting the mailname out of
    /etc/mailname.  (closes: #287636)

 -- Tollef Fog Heen <tfheen@debian.org>  Wed, 16 Feb 2005 20:29:00 +0100

mailman (2.1.5-6) unstable; urgency=high

  * SECURITY UPDATE: fix information disclosure
  * Added debian/patches/04_CAN-2005-0202.dpatch:
    Mailman/Cgi/private.py, true_path(): fix the removal of '..' and '.' from
    private mail archive paths to prohibit path traversal (the former version
    transformed ".....///" to "../") (closes: #294467) 
    (References: CAN-2005-0202)
  * Tighten build-deps on dpatch. (closes: #291289)
  * Update Czech debconf translation. (closes: #293002)